--- a/index.html
+++ b/index.html
@@ -11,15 +11,24 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./dist/style.css" />
 
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body class="flex-jc-aic">
     <div class="wrapper flex-col-jcaic">
-      <img src="./images/image-qr-code.png" alt="qrcode" class="qrcode">
+      <img src="./images/image-qr-code.png" alt="qrcode" class="qrcode" />
       <p class="title">Improve your front-end skills by building projects</p>
-      <p class="description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      <p class="description">
+        Scan the QR code to visit Frontend Mentor and take your coding skills to
+        the next level
+      </p>
     </div>
   </body>
 </html>
